[package]
name = "caulk-plus-grpc"
version = "0.1.0"
edition = "2021"

[[bin]] # 用来运行 HelloWorld gRPC 服务器的可执行文件
name = "caulk-plus-server"
path = "src/server.rs"

[[bin]] # 用来运行 HelloWorld gRPC 客户端的可执行文件
name = "caulk-plus-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
caulk-plus = {path = "./caulk_plus"}
ark-bls12-381 = { version = "^0.3.0", features = ["std"] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
rand = "0.8.5"
[build-dependencies]
tonic-build = "0.11"