[package]
name = "caulk-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
ark-poly = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", features = ["std"] }
ark-poly-commit = { version = "^0.3.0", default-features = false }
blake2 = "0.9.1"
byteorder = "1"
rand = "0.8.5"
rayon = { version = "1.5.2", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"